2018-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dcm.c (DCM_ReadGrayscaleImage): If a palette was
	provided, the image may be in PseudoClass but we need DirectClass
	for gray image when GRAYSCALE_USES_PALETTE is not defined.  Fixes
	oss-fuzz 7550 "graphicsmagick/coder_DCM_fuzzer:
	Use-of-uninitialized-value in SyncImageCallBack". (Credit to
	OSS-Fuzz)

2018-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Remove strange addition of
	image->columns to pixel buffer offsets which now causes a heap
	overflow since the buffer has been right-sized.  Perhaps the extra
	offset plus the over-sized allocation was some attempt to avoid
	buffer over/underflows due to bugs in libtiff. Fixes oss-fuzz 8384
	"graphicsmagick/coder_BIGTIFF_fuzzer: Heap-buffer-overflow in
	put1bitbwtile" which is described to be a regression. (Credit to
	OSS-Fuzz)

	* magick/render.c (DrawImage): Fix wrong range checks which caused
	spurious "Parsing of SVG images fail with "Non-conforming drawing
	primitive definition (push)" failure.  Fixes SourceForge issue 561
	"Parsing of SVG images fail with "Non-conforming drawing primitive
	definition (push)"" which is due to problems caused by the fix for
	SourceForge issue 517.

	* coders/tiff.c (WritePTIFImage): Use '-define
	ptif:minimum-geometry=<geometry>' to specify the smallest
	subresolution frame which is produced by the PTIF (Pyramid TIFF)
	writer.

2018-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WritePTIFImage): Allow 1x1 input image to be
	supported.

	* coders/png.c (ReadOneJNGImage): Unconditionally free JDAT chunk
	memory.  Fixes oss-fuzz 8366 "graphicsmagick/coder_JNG_fuzzer:
	Direct-leak in ReadOneJNGImage". (Credit to OSS-Fuzz)

	* coders/tiff.c (WritePTIFImage): Fix leak of pyramid Image list
	if ResizeImage() fails.  Fixes oss-fuzz 8364
	"graphicsmagick/coder_PTIF_fuzzer: Indirect-leak in
	CloneImage". (Credit to OSS-Fuzz)
