@@ -43,7 +43,12 @@ provided, the image may be in PseudoClass but we need DirectClass
 for gray image when GRAYSCALE_USES_PALETTE is not defined.  Fixes
 oss-fuzz 7550 &quot;graphicsmagick/coder_DCM_fuzzer:
 Use-of-uninitialized-value in SyncImageCallBack&quot;. (Credit to
-OSS-Fuzz)</li>
+OSS-Fuzz)
+(ReadDCMImage): Restore use of DCM_PostRescaleImage() in order to
+obtain suitably scaled DICOM again.  Hopefully it is more robust
+now.
+(DCM_ReadPaletteImage): Assure that DirectClass pixels are
+initialized.</li>
 </ul>
 </blockquote>
 <p>2018-05-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
